changed the search to brave

--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                             window.open(`https://${query}`, '_blank');
                         } else {
                             // Search query
-                            window.open(`https://www.google.com/search?q=${encodeURIComponent(query)}`, '_blank');
+                            window.open(`https://search.brave.com/search?q=${encodeURIComponent(query)}`, '_blank');
                         }
                     }
                 }
