--- a/index.html
+++ b/index.html
@@ -559,6 +559,10 @@
             });
         });
     </script>
+
+    <!--here ima load the scripts for like functionality-->
+    <script src="/active/uv/uv.bundle.js"></script>
+    <script src="/active/uv/uv.config.js"></script>
 </body>
 </html>
 
