--- a/active/launch.html
+++ b/active/launch.html
@@ -39,7 +39,7 @@
 <body>
     <div class="loading-screen">
         <p class="info">
-            Handling your request...
+            yeag basically uh this is skidded
         </p>
     </div>
     <iframe id="site-iframe" src="" style="z-index: 9999;" allow="fullscreen; autoplay; encrypted-media; picture-in-picture; microphone; camera; geolocation; clipboard-write; payment; midi; vr; document-domain; pointer-lock">></iframe>
